@startuml Status Diagram
title Server::choseAction() Status Diagram

[*] ---> IDLE : !graffiti.isExist() || !alphabot.isEngineStarted()
IDLE --> [*]


[*] --> TURN : abs(angle) > dAngle
TURN --> LEFT : angle < 0
LEFT --> [*]
TURN --> RIGHT : angle > 0
RIGHT --> [*]

[*] --> FORWARD : dist > dDist
FORWARD --> [*]

[*] --> CLEAN : dist <= dDist
CLEAN --> [*]
@enduml